hydroflow/tests/compile-fail/surface_port_join.stderr
error: Unexpected input port. Expected one of: `0`, `1`
 --> tests/compile-fail/surface_port_join.rs:6:37
  |
6 |         recv_iter([(1, 1), (2, 2)]) -> j;
  |                                     ^^

error: Unexpected input port. Expected one of: `0`, `1`
 --> tests/compile-fail/surface_port_join.rs:7:37
  |
7 |         recv_iter([(3, 3), (4, 4)]) -> j;
  |                                     ^^

error: Missing expected input port(s): `0`, `1`.
 --> tests/compile-fail/surface_port_join.rs:5:13
  |
5 |         j = join() -> for_each(std::mem::drop);
  |             ^^^^^^
